--- a/src/app/core/master/master.component.html
+++ b/src/app/core/master/master.component.html
@@ -2,11 +2,12 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-2">
+    <div class="col-3 mr-0 pr-0">
       <app-left-sidebar></app-left-sidebar>
     </div>
     <!-- main -->
-    <div class="col-10 body">
+    <div class="col-9 body ml-0 pl-0 ">
+      <a class="nav-link" [routerLink]="['employee/add']"  routerLinkActive="router-link-active">+ Add new</a>
       <router-outlet></router-outlet>
     </div>
     <!-- / end main -->
