--- a/src/app/feature-modules/personal-information/personal-information.component.html
+++ b/src/app/feature-modules/personal-information/personal-information.component.html
@@ -1,14 +1,35 @@
-<div class="tab-content" id="v-pills-tabContent">
-  <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
-    <p>Cillum ad ut irure tempor velit nostrud occaecat ullamco aliqua anim Lorem sint. Veniam sint duis incididunt do esse magna mollit excepteur laborum qui. Id id reprehenderit sit est eu aliqua occaecat quis et velit excepteur laborum mollit dolore eiusmod. Ipsum dolor in occaecat commodo et voluptate minim reprehenderit mollit pariatur. Deserunt non laborum enim et cillum eu deserunt excepteur ea incididunt minim occaecat.</p>
-  </div>
-  <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-    <p>Culpa dolor voluptate do laboris laboris irure reprehenderit id incididunt duis pariatur mollit aute magna pariatur consectetur. Eu veniam duis non ut dolor deserunt commodo et minim in quis laboris ipsum velit id veniam. Quis ut consectetur adipisicing officia excepteur non sit. Ut et elit aliquip labore Lorem enim eu. Ullamco mollit occaecat dolore ipsum id officia mollit qui esse anim eiusmod do sint minim consectetur qui.</p>
-  </div>
-  <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
-    <p>Fugiat id quis dolor culpa eiusmod anim velit excepteur proident dolor aute qui magna. Ad proident laboris ullamco esse anim Lorem Lorem veniam quis Lorem irure occaecat velit nostrud magna nulla. Velit et et proident Lorem do ea tempor officia dolor. Reprehenderit Lorem aliquip labore est magna commodo est ea veniam consectetur.</p>
-  </div>
-  <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
-    <p>Eu dolore ea ullamco dolore Lorem id cupidatat excepteur reprehenderit consectetur elit id dolor proident in cupidatat officia. Voluptate excepteur commodo labore nisi cillum duis aliqua do. Aliqua amet qui mollit consectetur nulla mollit velit aliqua veniam nisi id do Lorem deserunt amet. Culpa ullamco sit adipisicing labore officia magna elit nisi in aute tempor commodo eiusmod.</p>
-  </div>
+<div class="tab-content m-3 p pt-5">
+    <form [formGroup]="employeeForm">
+      <div class="form-group row">
+        <label for="fullName" class="col-sm-3 col-form-label">Full Name</label>
+        <div class="col-sm-6">
+          <input type="text" formControlName="fullName" class="form-control">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="address" class="col-sm-3 col-form-label">Address</label>
+        <div class="col-sm-6">
+          <input type="text" formControlName="address" class="form-control">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="phoneNumber" class="col-sm-3 col-form-label">Phone Number</label>
+        <div class="col-sm-6">
+          <input type="text" formControlName="phoneNumber" class="form-control">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="position" class="col-sm-3 col-form-label">Position</label>
+        <div class="col-sm-6">
+          <select class="form-control" formControlName="role">
+            <option>--Select--</option>
+            }
+            <option *ngFor="let role of rolesDD" [value]="role">{{role}}</option>
+          </select>
+        </div>
+      </div>
+      <button (click)="save()">Save</button>
+    </form>
+
+
 </div>
