Completed the Client

--- a/src/app/core/master/left-sidebar/left-sidebar.component.scss
+++ b/src/app/core/master/left-sidebar/left-sidebar.component.scss
@@ -1,7 +1,16 @@
-.nav-link {
+.nav-item {
   padding: 1em;
-  margin: 5px 10px 5px 0px;
-  background-color: rgb(204, 204, 204);
+  margin: 0px 10px 5px 0px;
+  background-color: hsl(252deg 6% 83%);
+
+}
+
+.left-nav {
+
+  .username,
+  .description {
+    display: block;
+  }
 
 }
 
@@ -9,7 +18,30 @@ nav {
   background-color: white;
 }
 
-.nav-link.active {
-  margin-right: 0px !important;
-  background-color: blanchedalmond;
+
+.nav-item>.nav-box>.right {
+  position: relative;
+  right: 0rem;
+  float: right;
+  top: 1.4rem;
 }
+@media only screen and (max-width: 1026px) {
+  .right {
+      display: none;
+  }
+}
+
+.nav-item.active {
+  margin-right: 0px !important;
+  padding-right: 26px;
+  background-color: hsl(12deg 29% 97%);
+}
+
+// .nav-item {
+//   .active {
+//     &:first-child  {
+//       margin-right: 0px !important;
+//       background-color: hsl(12deg 29% 97%);
+//     }
+//   }
+// }
