--- a/src/app/core/master/header/header.component.html
+++ b/src/app/core/master/header/header.component.html
@@ -1,9 +1,11 @@
-<nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Company name</a>
-  <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
+<nav class="navbar  sticky-top flex-md-nowrap p-0 mt-2 ml-3">
+  <h3>EMPLOYEES</h3>
+
   <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
-      <a class="nav-link" href="#">Sign out</a>
+
+      <a class="btn btn-light m-1" [routerLink]="['employee/add']" routerLinkActive="router-link-active">+
+        Add new</a>
     </li>
   </ul>
 </nav>
