--- a/src/app/core/master/left-sidebar/left-sidebar.component.html
+++ b/src/app/core/master/left-sidebar/left-sidebar.component.html
@@ -1,30 +1,24 @@
 <nav class="d-none d-md-block sidebar mr-0 pr-0">
   <div class="sidebar-sticky">
-    <ul class="nav flex-column">
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['employee/add']" routerLinkActive="active router-link-active">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-            class="feather feather-home">
-            <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-            <polyline points="9 22 9 12 15 12 15 22"></polyline>
-          </svg>
-          Dashboard
-        </a>
-      </li>
+    <ul class="nav flex-column left-nav">
 
-      <li class="nav-item" *ngFor="let employee of this.employeeResponse">
+      <li class="nav-item mt-0" *ngFor="let employee of this.employeeResponse"
+        routerLinkActive="active router-link-active">
+        <div class="nav-box">
+          <a class="nav-link float-left" [routerLink]="['employee', employee.id]">
 
-        <a class="nav-link" [routerLink]="['employee', employee.id]" routerLinkActive="active router-link-active">
-          {{employee.fullname}}
-          <i class="fa fa-trash right" aria-hidden="true"></i> <br>
-          {{employee.role}}
+            <span class="username font-weight-bold">{{employee.fullname}}</span>
+            <span class="description"> {{employee.role}}</span>
+          </a>
+          <a class="right" (click)="deleteEmployee(employee)" href="#">
+            <i class="fa fa-trash" aria-hidden="true"></i>
 
-        </a>
+          </a>
+
+        </div>
+
       </li>
 
     </ul>
   </div>
 </nav>
-
-
